--- a/jobs.html
+++ b/jobs.html
@@ -169,7 +169,7 @@ style="background-color: black; color: white; padding: 10px"
         <a href="pageCopy.html" style="color: white; text-decoration: none">STORE</a>
       </div>
       <div class="col-auto">
-        <a href="pageCopyJobs.html" style="color: white; text-decoration: none">JOBS</a>
+        <a href="jobs.html" style="color: white; text-decoration: none">JOBS</a>
       </div>
       <div class="col-auto">
         <a href="#" style="color: white; text-decoration: none"
