Added jobs_2.html - a new and improved version of jobs.html, updated stylesheet

--- a/jobs_2.html
+++ b/jobs_2.html
@@ -14,15 +14,15 @@
 <body>
   
  <!--Navigation-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-         <a class="navbar-brand" href="pageCopy.html"><img src="logo.png" width="50" height="25"></a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"></button>>
-         <span class="navbar-toggler-icon"></span>
-        </button> -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav">
-                    <a class="nav-item dropdown nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown">LOCATIONS & MENUS</a>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="logo.png" width="100" height="42"></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> 
+    <div class="collapse navbar-collapse d-flex justify-content-end me-3" id="navbarToggler">
+      <ul class="navbar-nav dropdown me-3">
+        <li class="nav-item dropdown nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown">LOCATIONS & MENUS</li>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">ATLANTA</a></li>
                         <li><a class="dropdown-item" href="#">CHARLESTON</a></li>
@@ -41,12 +41,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">PRESS</a>
                 </li>    
-                <li class="nav-item">
-                    <button type="button" class="btn btn-danger btn-sm h-75 align-middle"><a class="nav-link align-middle" href="#">ORDER ONLINE</a></button>
-                </li>        
-            </ul>
-        </div>
+      </ul>
+        <button class="btn btn-danger" type="submit">ORDER NOW</button>
+      </form>
     </div>
+  </div>
 </nav>
 
 <!--Carousel Hero-->
